# VectorScope-Tauri

./: README.md  package-lock.json  package.json  vite.config.ts
src/: App.tsx  CaptureAreaSetting.tsx  VectorScope.tsx  Waveform.tsx  reverse_image.css  styles.css  waveform.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: calc_color_vector.rs  capture_screen.rs  main.rs  main_view_model.rs  model.rs  plotter.rs
src-tauri/src/message/: payload.rs
src-tauri/src/model/: graph_plotter.rs  mouse_info.rs  screenshot_capture.rs  vector_scope.rs  vector_scope_thread.rs  worker_thread.rs  worker_thread_base.rs
src/html/: vector_scope.html
src/pages/: capture_area_setting_window.html
src/pages/capture_area_setting_window/: CaptureAreaSetting.tsx  capture_area_setting_window.html
src/pages/common/: styles.css
src/pages/vector_scope/: VectorScope.tsx  vector_scope.html
src/pages/waveform/: Waveform.tsx  waveform.html
