[package]
name = "tauri-vector-scope"
version = "0.4.1"
description = "ROP - Vector Scope"
authors = ["Republic Of Korokke"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["global-shortcut-all", "shell-open", "system-tray", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
screenshots = "0.6.0"
display-info = "0.4.2"
mouse_position = "0.1.3"
chrono = "0.4.26"
base64 = "0.21.2"
plotters = "0.3.5"
plotters-bitmap = "0.3.3"
image = "0.24.6"
colors-transform = "0.2.11"
plotters-backend = "0.3.5"
once_cell = "1.18.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
